# talos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
convex/: agents.ts  aiAgents.ts  index.ts  priceIntelligence.ts  products.ts  requisitions.ts  schema.ts  spendAnalytics.ts  universities.ts  vendors.ts
convex/seeds/: columbiaSpending.ts
python/: pyproject.toml  requirements.txt
python/agents/: __init__.py
python/agents/core/: __init__.py  base_agent.py
python/agents/implementations/: __init__.py  price_agents.py  procurement_agents.py
python/api/: __init__.py  main.py
python/tests/: __init__.py  test_agents.py  test_api.py
python/tools/: __init__.py  convex_client.py  procurement_tools.py  unimarket_client.py  unimarket_tools.py
python/workflows/: __init__.py  procurement_workflows.py  worker.py
scripts/: dev.sh  seed-data.ts  start.sh
src/: index.ts  server.ts
src/agents/: index.ts  prompts.ts
src/agents/phase1/: catalog-intelligence.ts  email-communication.ts  index.ts  price-discovery.ts  software-license.ts  vendor-intelligence.ts
src/connectors/procurement/: factory.ts  index.ts  service.ts
src/connectors/procurement/ariba/: index.ts
src/connectors/procurement/base/: connector.ts  cxml-handler.ts  types.ts
src/connectors/procurement/coupa/: index.ts
src/connectors/procurement/jaggaer/: index.ts
src/connectors/procurement/oracle/: index.ts
src/connectors/procurement/sciquest/: index.ts
src/connectors/procurement/unimarket/: index.ts
src/connectors/procurement/workday/: index.ts
src/inngest/: client.ts  functions.ts
src/integrations/: index.ts  jaggaer.ts  unimarket.ts
src/integrations/__tests__/: unimarket.test.ts
src/intelligence/: anomalyDetection.ts  hmm.ts  index.ts
src/langgraph/: agents.ts  index.ts  unimarket-tools.ts
src/middleware/: auth.ts  errorHandler.ts  index.ts  rateLimiter.ts
src/routes/: agents.ts  composio.ts  connectors.ts  index.ts  intelligence.ts  phase1-agents.ts  prices.ts  products.ts  requisitions.ts  spendAnalytics.ts  spendCategoryData.ts  unimarket.ts  universities.ts  vendors.ts  webhooks.ts
src/services/composio/: agent-enhancer.ts  index.ts  langgraph-adapter.ts  service.ts  tool-provider.ts  types.ts
src/temporal/: activities.ts  client.ts  index.ts  worker.ts  workflows.ts
src/temporal/activities/: approval-activities.ts  compliance-activities.ts  reconciliation-activities.ts
src/temporal/workflows/: approval-routing.ts  payment-reconciliation.ts  policy-compliance.ts
src/types/: context.ts  index.ts
tests/: anomalyDetection.test.ts  hmm.test.ts
